...
        .navigationBarTitle(Text("Equalizer"), displayMode: .inline)
        .toolbar {
          ToolbarItem(placement: .confirmationAction) {
            Button(action: {
              isPresented = false
            }) {
              Text("Done").bold()
            }
          }
        }
      }
    }
  }
...
